--- a/overlay-lineage/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-lineage/frameworks/base/core/res/res/values/config.xml
@@ -71,4 +71,18 @@
 
     <!-- Power press vendor code. -->
     <integer name="config_powerPressCode">19</integer>
+
+    <!-- LargeScreenConfigOverlay-->
+    <bool name="config_enableMultiUserUI">true</bool>
+    <bool name="config_isCameraCompatControlForStretchedIssuesEnabled">true</bool>
+    <bool name="config_isCompatFakeFocusEnabled">true</bool>
+    <bool name="config_isWindowManagerCameraCompatTreatmentEnabled">true</bool>
+    <bool name="config_letterboxIsDisplayRotationImmersiveAppCompatPolicyEnabled">true</bool>
+    <bool name="config_letterboxIsEducationEnabled">true</bool>
+    <bool name="config_letterboxIsEnabledForTranslucentActivities">true</bool>
+    <bool name="config_letterboxIsHorizontalReachabilityEnabled">true</bool>
+    <bool name="config_letterboxIsPolicyForIgnoringRequestedOrientationEnabled">true</bool>
+    <bool name="config_letterboxIsSplitScreenAspectRatioForUnresizableAppsEnabled">true</bool>
+    <bool name="config_letterboxIsVerticalReachabilityEnabled">true</bool>
+    <bool name="config_showUserSwitcherByDefault">true</bool>
 </resources>
