tangorpro: overlay: Increase status_bar_padding_start
This makes it match ongoing_appops_dot_min_padding.

Change-Id: I64a01e8d3766b97fd416bba1e26ba8b5d4159a42

--- a/tangorpro/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/tangorpro/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -22,4 +22,7 @@
 
     <!-- Padding for the lock icon on the keyguard. In pixels - should not scale with display size. -->
     <dimen name="lock_icon_padding">32px</dimen>
+
+    <!-- the padding on the start of the statusbar -->
+    <dimen name="status_bar_padding_start">20dp</dimen>
 </resources>
